k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud11-app
  namespace: staging
spec:
  selector:
    app: cloud11-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
